# errorworks

./: .filigree.conf  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  security.yml
arch-analysis-2026-03-12-0000/02-subsystem-catalog/: index.html
arch-analysis-2026-03-12-0000/04-final-report/: index.html
arch-analysis-2026-03-12-0000/05-quality-assessment/: index.html
architecture/: index.html
changelog/: index.html
docs/: architecture.md  file_breakdown.md  index.md
docs/arch-analysis-2026-03-12-0000/: 02-subsystem-catalog.md  04-final-report.md  05-quality-assessment.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: chaosblob.md  chaosllm.md  chaossmtp.md  chaosweb.md  configuration.md  metrics.md  presets.md  testing-fixtures.md
docs/plans/: 00-test-remediation-overview.md  01-cli-test-coverage.md  02-integration-test-layer.md  03-property-based-testing.md
docs/reference/: api.md  cli.md  config-schema.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-03-16-professionalize-package.md  2026-05-24-chaosblob.md  2026-05-24-chaossmtp-implementation.md
docs/superpowers/specs/: 2026-03-16-professionalize-package-design.md  2026-05-24-chaossmtp-design.md
file_breakdown/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/chaosblob/: index.html
guide/chaosllm/: index.html
guide/chaossmtp/: index.html
guide/chaosweb/: index.html
guide/configuration/: index.html
guide/metrics/: index.html
guide/presets/: index.html
guide/testing-fixtures/: index.html
plans/00-test-remediation-overview/: index.html
plans/01-cli-test-coverage/: index.html
plans/02-integration-test-layer/: index.html
plans/03-property-based-testing/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/config-schema/: index.html
search/: search_index.json
src/errorworks/: __init__.py
src/errorworks/blob/: __init__.py  cli.py  config.py  error_injector.py  metrics.py  server.py  store.py  xml.py
src/errorworks/engine/: __init__.py  admin.py  cli.py  config_handoff.py  config_loader.py  injection_engine.py  latency.py  metrics_store.py  request_body.py  types.py  validators.py  vocabulary.py
src/errorworks/llm/: __init__.py  cli.py  config.py  error_injector.py  metrics.py  response_generator.py  server.py
src/errorworks/llm_mcp/: __init__.py  server.py
src/errorworks/smtp/: __init__.py  cli.py  config.py  error_injector.py  message_capture.py  metrics.py  server.py
src/errorworks/testing/: __init__.py
src/errorworks/web/: __init__.py  cli.py  config.py  content_generator.py  error_injector.py  metrics.py  server.py
stylesheets/: extra.css
superpowers/plans/2026-03-16-professionalize-package/: index.html
superpowers/plans/2026-05-24-chaosblob/: index.html
superpowers/plans/2026-05-24-chaossmtp-implementation/: index.html
superpowers/specs/2026-03-16-professionalize-package-design/: index.html
superpowers/specs/2026-05-24-chaossmtp-design/: index.html
tests/fixtures/: chaosblob.py  chaosllm.py  chaossmtp.py  chaosweb.py
tests/integration/: conftest.py  test_blob_pipeline.py  test_llm_pipeline.py  test_mcp_pipeline.py  test_smtp_pipeline.py  test_web_pipeline.py
tests/unit/: test_package_metadata.py  test_testing_public_api.py  test_workflows.py
tests/unit/blob/: conftest.py  test_cli.py  test_config.py  test_error_injector.py  test_fixture.py  test_metrics.py  test_server.py  test_store.py  test_xml.py
tests/unit/engine/: test_admin.py  test_config_handoff.py  test_config_loader.py  test_injection_engine.py  test_metrics_store.py  test_request_body.py  test_types.py  test_validators.py  test_vocabulary.py
tests/unit/llm/: conftest.py  test_cli.py  test_config.py  test_error_injector.py  test_fixture.py  test_latency_simulator.py  test_metrics.py  test_response_generator.py  test_server.py
tests/unit/llm_mcp/: test_server.py
tests/unit/smtp/: conftest.py  test_cli.py  test_config.py  test_error_injector.py  test_fixture.py  test_metrics.py  (+2 more)
(+29 files in other folders)
